--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -96,6 +96,6 @@
   </div>
 
   <!-- אפליקציה (Vanilla JS) -->
-  <script type="module" src="./app.js"></script>
+  <script type="module" src="./mailinbox.js"></script>
 </body>
 </html>
