--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>דוא"ל פנימי – Family Mail</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./mailbox-style.css" />
   <!-- אפשר להזריק קונפיגורציה גלובלית לפני טעינת האפליקציה: -->
   <script>
     // דוגמה – החלף לערכים האמיתיים אצלך:
