--- a/public/memory.html
+++ b/public/memory.html
@@ -240,12 +240,13 @@
         try {
             // Use global variables if available, otherwise use a placeholder
             const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {
-              apiKey: "PLACEHOLDER_API_KEY",
-              authDomain: "PLACEHOLDER_AUTH_DOMAIN",
-              projectId: "PLACEHOLDER_PROJECT_ID",
-              storageBucket: "PLACEHOLDER_STORAGE_BUCKET",
-              messagingSenderId: "PLACEHOLDER_MESSAGING_SENDER_ID",
-              appId: "PLACEHOLDER_APP_ID",
+              apiKey: "AIzaSyB6CtzBQMV9JXJSgL1gxKjdB2kP5UQ_63E",
+              authDomain: "memorials-4f3f8.firebaseapp.com",
+              projectId: "memorials-4f3f8",
+              storageBucket: "memorials-4f3f8.firebasestorage.app",
+              messagingSenderId: "456197169350",
+              appId: "1:456197169350:web:7b5e0f161fdc8d3e9eb7c7",
+              measurementId: "G-F1XVYMY9BE"
             };
             const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
             const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
@@ -534,3 +535,4 @@
     </script>
 </body>
 </html>
+
