--- a/public/memory.html
+++ b/public/memory.html
@@ -238,18 +238,10 @@
       // Initialize Firebase on component mount
       useEffect(() => {
         try {
-            // Use global variables if available, otherwise use a placeholder
-            const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {
-              apiKey: "AIzaSyB6CtzBQMV9JXJSgL1gxKjdB2kP5UQ_63E",
-              authDomain: "memorials-4f3f8.firebaseapp.com",
-              projectId: "memorials-4f3f8",
-              storageBucket: "memorials-4f3f8.firebasestorage.app",
-              messagingSenderId: "456197169350",
-              appId: "1:456197169350:web:7b5e0f161fdc8d3e9eb7c7",
-              measurementId: "G-F1XVYMY9BE"
-            };
-            const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
-            const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+            // Use global variables for Firebase configuration
+            const firebaseConfig = JSON.parse(__firebase_config);
+            const appId = __app_id;
+            const initialAuthToken = __initial_auth_token;
 
             // Initialize Firebase services
             const app = firebase.initializeApp(firebaseConfig);
@@ -535,4 +527,3 @@
     </script>
 </body>
 </html>
-
