--- a/public/memory.html
+++ b/public/memory.html
@@ -100,22 +100,6 @@
         generating: 'Generating...'
       }
     };
-        useEffect(() => {
-  try {
-    // השורה הזו היא המקום שבו אתה משלב את פרטי התצורה שלך
-    const firebaseConfig = {
-      apiKey: "AIzaSyB6CtzBQMV9JXJSgL1gxKjdB2kP5UQ_63E",
-      authDomain: "memorials-4f3f8.firebaseapp.com",
-      projectId: "memorials-4f3f8",
-      storageBucket: "memorials-4f3f8.firebasestorage.app",
-      messagingSenderId: "456197169350",
-      appId: "1:456197169350:web:7b5e0f161fdc8d3e9eb7c7",
-      measurementId: "G-F1XVYMY9BE"
-    };
-
-    const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
-    const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
-
 
     // Helper: get string by key
     function t(lang, key, ...args) {
@@ -254,10 +238,10 @@
       // Initialize Firebase on component mount
       useEffect(() => {
         try {
-            // Use global variables for Firebase configuration
-            const firebaseConfig = JSON.parse(__firebase_config);
-            const appId = __app_id;
-            const initialAuthToken = __initial_auth_token;
+            // Get Firebase config and auth token from environment variables
+            const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+            const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {};
+            const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
 
             // Initialize Firebase services
             const app = firebase.initializeApp(firebaseConfig);
@@ -272,6 +256,7 @@
             // Authenticate the user
             (async () => {
                 try {
+                    // Use the provided custom token if available, otherwise sign in anonymously
                     if (initialAuthToken) {
                         await auth.signInWithCustomToken(initialAuthToken);
                     } else {
@@ -539,7 +524,6 @@
 
     // Render the app
     ReactDOM.createRoot(document.getElementById('root')).render(<App />);
-
     </script>
 </body>
 </html>
