--- a/public/memory.html
+++ b/public/memory.html
@@ -15,6 +15,17 @@
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
+    <script>
+    const firebaseConfig = {
+  apiKey: "AIzaSyB6CtzBQMV9JXJSgL1gxKjdB2kP5UQ_63E",
+  authDomain: "memorials-4f3f8.firebaseapp.com",
+  projectId: "memorials-4f3f8",
+  storageBucket: "memorials-4f3f8.firebasestorage.app",
+  messagingSenderId: "456197169350",
+  appId: "1:456197169350:web:7b5e0f161fdc8d3e9eb7c7",
+  measurementId: "G-F1XVYMY9BE"
+};
+    </script>
     <style>
         /* small RTL-friendly font stack */
         @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;700;800&display=swap');
