--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -7,16 +7,7 @@
   <link rel="stylesheet" href="./mailbox-style.css" />
   <!-- אפשר להזריק קונפיגורציה גלובלית לפני טעינת האפליקציה: -->
   <script>
-   // 2. הגדרות Firebase (כפי ששלחת)
-const firebaseConfig = {
-  apiKey: "AIzaSyACnXDX1fcnaonBQgeT35oBLA5cAse7ekY",
-  authDomain: "forum-5e87a.firebaseapp.com",
-  projectId: "forum-5e87a",
-  storageBucket: "forum-5e87a.firebasestorage.app",
-  messagingSenderId: "1016957490060",
-  appId: "1:1016957490060:web:3551e41dda7fd59e7afca9",
-  measurementId: "G-XY37108JGV"
-};
+
     window.__app_id = "default-app-id";
     // אופציונלי: אסימון התחברות מותאם
     // window.__initial_auth_token = "YOUR_CUSTOM_TOKEN";
@@ -94,7 +85,17 @@ const firebaseConfig = {
       </main>
     </section>
   </div>
-
+<script> 
+        window.__firebase_config = {
+  apiKey: "AIzaSyAID_kPGA6Khczh0lIgd7E13LJS76JJ9nI",
+  authDomain: "mailbox-e0ce2.firebaseapp.com",
+  projectId: "mailbox-e0ce2",
+  storageBucket: "mailbox-e0ce2.firebasestorage.app",
+  messagingSenderId: "199399854104",
+  appId: "1:199399854104:web:6aec488e6aeee0dec3736d",
+  measurementId: "G-V3CSEQY5CR"
+};
+</script>
   <!-- אפליקציה (Vanilla JS) -->
   <script type="module" src="./mailinbox.js"></script>
 </body>
