--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -82,6 +82,7 @@
       <main class="main">
         <!-- כאן נטען דינמית: רשימת מיילים / תצוגת מייל / קומפוז / אנשי קשר -->
         <div id="mainContent" class="stretch"></div>
+        <div id="mailContainer"></div>
       </main>
     </section>
   </div>
