--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -83,6 +83,7 @@
         <!-- כאן נטען דינמית: רשימת מיילים / תצוגת מייל / קומפוז / אנשי קשר -->
         <div id="mainContent" class="stretch"></div>
         <div id="mailContainer"></div>
+            <em>טוען הודעות...</em>
       </main>
     </section>
   </div>
