--- a/public/see-messages.html
+++ b/public/see-messages.html
@@ -946,7 +946,7 @@
         // Initial app start
         window.onload = initializeAppAndAuth;
         
-  <script src="/js/auth.js"></script>
+  <script src="/js/auth.js"</script>
   <script src="/js/inbox-ui.js"></script>
   <script src="/js/compose.js"></script>
   <script src="/js/drafts.js"></script>
