--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -55,7 +55,7 @@
     <!-- View: Mailbox (sidebar + main) -->
     <section id="view-mailbox" class="view view--fill" hidden>
       <aside class="sidebar">
-        <div class="app-name">📧 דוא"ל פנימי</div>
+        <div class="app-name">📧דוא"ל משפחתי</div>
 
         <div class="user-block">
           <div class="muted">ברוך הבא, <span id="sidebarUsername"></span>!</div>
@@ -72,6 +72,7 @@
           <button class="nav-btn" data-folder="sent">📤 נשלח</button>
           <button class="nav-btn" data-folder="trash">🗑️ אשפה</button>
           <button class="nav-btn" data-folder="spam">🚫 זבל</button>
+          <button id="btnSend">שלח</button>
         </nav>
 
         <div class="spacer"></div>
