--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -72,7 +72,6 @@
           <button class="nav-btn" data-folder="sent">📤 נשלח</button>
           <button class="nav-btn" data-folder="trash">🗑️ אשפה</button>
           <button class="nav-btn" data-folder="spam">🚫 זבל</button>
-          <button id="btnSend">שלח</button>
         </nav>
 
         <div class="spacer"></div>
@@ -84,6 +83,7 @@
         <!-- כאן נטען דינמית: רשימת מיילים / תצוגת מייל / קומפוז / אנשי קשר -->
         <div id="mainContent" class="stretch"></div>
         <div id="mailContainer"></div>
+          <div id="btnSend">שלח</div>
             <em>טוען הודעות...</em>
       </main>
     </section>
