--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -103,16 +103,10 @@
   <div id="mainContent" class="stretch">
     <!-- טופס קומפוז הודעה -->
     <form id="composeForm" class="vstack gap" hidden>
-      <label>נמען:</label>
       <input id="recipientInput" type="text" required />
-
-      <label>נושא:</label>
       <input id="subjectInput" type="text" />
-
-      <label>גוף ההודעה:</label>
       <textarea id="bodyInput" required></textarea>
-
-      <button id="btnSend" type="button" class="btn primary">שלח</button>
+      <button id="btnSend" type="button" class="btn primary"></button>
     </form>
   </div>
   </main>
