--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -101,12 +101,11 @@
   <main class="main">
   <div id="mainContent" class="stretch">
     <!-- טופס קומפוז הודעה -->
-    <form id="composeForm" class="vstack gap" hidden>
-      <input id="recipientInput" type="text" required />
-      <input id="subjectInput" type="text" />
-      <textarea id="bodyInput" required></textarea>
-      <button id="btnSend" type="button" class="btn primary"></button>
-    </form>
+    <div id="composeForm" class="vstack gap" hidden></div>
+      <div id="recipientInput" type="text" required </div>
+      <div id="subjectInput" type="text" </div>
+      <div id="bodyInput" required></div>
+      <div id="btnSend" type="button" class="btn primary"></div>
   </div>
   </main>
   <!-- אפליקציה (Vanilla JS) -->
