--- a/public/email.html
+++ b/public/email.html
@@ -1,3 +1,4 @@
+public/email.html
 import React, { useState, useEffect, useRef } from 'react';
 import { Mail, Send, Edit, Inbox, Home, User, Loader2, Search, CornerUpLeft, Globe, Paperclip, Download, Bold, Italic, Underline } from 'lucide-react';
 import { initializeApp } from 'firebase/app';
