--- a/public/familychat.html
+++ b/public/familychat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>אפליקציית צ'אט רב-לשונית</title>
+    <title>אפליקציית צ'אט משפחתית רב-לשונית</title>
     <!-- Tailwind CSS CDN for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Inter font -->
