--- a/public/index.html
+++ b/public/index.html
@@ -84,10 +84,10 @@
     <ul>
        <div class="menu-bar">
       <a href="/">🏠 עמוד ראשי</a>
-        <a href="about.html"> <span>ℹ️</span> אודות</a>
+        <a href="about.html"> <span>ℹ️</span> עמוד העדכונים (Unavailable currently)</a>
       <a href="/tree.html"> <span>🧬</span> עץ המשפחה</a>
       <a href="/chat.html"> <span>🧑‍💻</span> צ'אט AI</a>
-      <a href="/mailbox.html"> <span>📩 </span> תיבת ההודעות האישית</a>
+      <a href="/contact-ways.html"> <span>📩 </span> אמצעי תקשורת משפחתיים</a>
       <<a href="/gallery.html"> <span>🖼️</span> גלריית תמונות</a>
       ><a href="/memorial.html"><span>🕯️</span> קיר זיכרון</a>
       <<a href="/timeline.html"><span>🗓️</span> ציר זמן</a>
