--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
 
 
     <section class="hero-image">
-      <img src="/assets/family-hero.png" alt="תמונת משפחה" />
+      <img src="/asset/family-hero.png" alt="תמונת משפחה" />
     </section>
 
   <footer>
