--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
     <ul>
        <div class="menu-bar">
       <a href="/">🏠 עמוד ראשי</a>
-        <a href="about.html"> <span>ℹ️</span> עמוד העדכונים (Unavailable currently)</a>
+        <a href="about.html"> <span>ℹ️</span> עמוד העדכונים</a>
       <a href="/tree.html"> <span>🧬</span> עץ המשפחה</a>
       <a href="/chat.html"> <span>🧑‍💻</span> צ'אט AI</a>
       <a href="/contact-ways.html"> <span>📩 </span> אמצעי תקשורת משפחתיים</a>
