--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>אתר המשפחה - Ben Abou, Elharrar ועוד</title>
+    <title>אתר המשפחה - Ben Abou, Bromberg ועוד</title>
     <link rel="stylesheet" href="/style.css" />
     <style>
         /* CSS קיימים */
