--- a/public/chat.html
+++ b/public/chat.html
@@ -198,6 +198,15 @@
         let audioPlayer = null;
 
         const firebaseConfig = JSON.parse(__firebase_config);
+        const firebaseConfig = {
+  apiKey: "AIzaSyD7f9DqeBe-3BQ8-GzS0S2wgGEPfsA82L0",
+  authDomain: "aichat-app-bf26f.firebaseapp.com",
+  projectId: "aichat-app-bf26f",
+  storageBucket: "aichat-app-bf26f.firebasestorage.app",
+  messagingSenderId: "1067740756856",
+  appId: "1:1067740756856:web:53d985cfcb4c723e23268d",
+  measurementId: "G-QKCJEVFKYF"
+};
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
 
         // Translation texts
