--- a/public/chat.html
+++ b/public/chat.html
@@ -199,7 +199,7 @@
 
         const firebaseConfig = JSON.parse(__firebase_config);
   apiKey: "AIzaSyD7f9DqeBe-3BQ8-GzS0S2wgGEPfsA82L0",
-  authDomain: "aichat-app-bf26f.firebaseapp.com",
+  authDomain "aichat-app-bf26f.firebaseapp.com",
   projectId: "aichat-app-bf26f",
   storageBucket: "aichat-app-bf26f.firebasestorage.app",
   messagingSenderId: "1067740756856",
